# substrate-kit

./: .gitattributes  .session-journal.md  CHANGELOG.md  CONSTITUTION.md  README.md  project.index.json  pyproject.toml  substrate.config.json
.github/: CODEOWNERS
.sessions/: 2026-07-09-audit-followups.md  2026-07-09-b1-record.md  2026-07-09-b1-run2-record.md  2026-07-09-control-protocol.md  2026-07-09-coordinator-review.md  2026-07-09-coordinator-winddown.md  2026-07-09-enabler-race-hotfix.md  2026-07-09-fleet-adoption-review.md  2026-07-09-fleet-wrap.md  2026-07-09-gen1-winddown.md  2026-07-09-groomed-ideas-1.md  2026-07-09-kl0-dogfood-seed.md  2026-07-09-kl1-ci-delta.md  2026-07-09-kl1-release-train.md  2026-07-09-kl2-governance-home.md  2026-07-09-kl3-telemetry.md  2026-07-09-kl4-lab-loop.md  2026-07-09-kl5-auto-draft.md  2026-07-09-kl5-bench-tree.md  2026-07-09-kl6-unblocked.md  2026-07-09-kl8-control-protocol-band.md  2026-07-09-order003.md  2026-07-09-order004.md  2026-07-09-order005-retro.md  2026-07-09-order006.md  2026-07-09-order007.md  2026-07-09-order008.md  2026-07-09-p0-adopt-engage-gate.md  2026-07-09-pinned-feed-contract-idea.md  2026-07-09-pl004-feature-build.md  2026-07-09-pl011-adoption-engaged.md  2026-07-09-project-review.md  2026-07-09-run-closeout.md  2026-07-09-run2-harness-prep.md  2026-07-09-seed-fix-yield-keyword.md  2026-07-09-v1.1.0-release.md  2026-07-09-v1.2.0-release.md  2026-07-09-winddown-addendum.md  2026-07-10-adopt-lane.md  2026-07-10-adopter-findings-batch.md  (+285 more)
.substrate/: episodic_index.json  guard-fires.jsonl  reflections.json  state.json
bench/: README.md  run_ab.py  score_m1.py
control/: README.md  inbox.md  outbox.md  status-gba-homebrew-trackb.md  status-superbot-coordinator.md  status-wave-v1.16.0.md  status.md
docs/: AGENT_ORIENTATION.md  CAPABILITIES.md  NEXT-TASKS.md  PROJECT-CLOSEOUT.md  _merge_verification_2026-07-15.md  adopters.md  ai-project-workflow.md  architecture.md  collaboration-model.md  current-state.md  decisions.md  eap-closeout-walkthrough-2026-07-14.md  environment-setup-script.md  fleet-repos.txt  helper-policy.md  house-style.md  owner-profile.md  ownership.md  question-router.md  repo-navigation-map.md  runtime_contracts.md
scripts/: _git_truth.py  check_bench_integrity.py  check_changelog_structure.py  check_idea_index.py  check_program_law.py  check_retro_index.py  check_taxonomy_sync.py  cut_release.py  env-setup.sh  measure_grounded_skills.py  measure_pr_latency.py  preflight.py  verify_release.py
src/: build_bootstrap.py  build_release_json.py
telemetry/: README.md  allocation-ladder.md  model-usage.jsonl
tests/: conftest.py  test_adopt.py  test_allowlist.py  test_archive.py  test_bench.py  test_bootstrap.py  test_check_adopters_current.py  test_check_claims.py  (+78 more)
(+808 files in other folders)
