# substrate-kit — the downloadable-package form of the kit.
#
# The DISTRIBUTION name is the one-place-swappable placeholder "substrate-kit"
# (owner decision: the published name is chosen by the owner at extraction; do
# not publish to PyPI from here). The IMPORT name is `engine` — acceptable for
# an in-repo / venv-local install, renamed together with the distribution at
# extraction. The zero-dependency single file `dist/bootstrap.py` remains the
# primary distribution form; this package is the pip-installable alternative.

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "substrate-kit"
# Kept equal to KIT_VERSION in src/engine/lib/config.py (a test pins them).
version = "1.18.0"
description = "A portable, self-improving agent-memory substrate: staged onboarding interview, mode-paced workflow rollout, triggers/reflections/maintenance loop, context-economy engine, and doc/namespace/seam/budget checkers — stdlib-only."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.scripts]
substrate-kit = "engine.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["engine*"]

[tool.setuptools.package-data]
engine = ["templates/*.tmpl"]

# ── Engine lint bans (founding plan §3.2 item 3) ────────────────────────────
# Recreates the no-print / no-assert / no-subprocess-in-engine discipline that
# superbot's ruff regime silently provided before extraction. Scope is the
# engine only: CI runs `python3 -m ruff check src/engine/` (the kit-quality
# check); tests/ and the dist artifact are excluded so a bare `ruff check`
# over the repo agrees with CI (pytest asserts + subprocess smoke runs are
# legitimate outside the engine).
[tool.ruff]
target-version = "py310"
extend-exclude = ["tests", "dist", "scripts", "bench"]

[tool.ruff.lint]
select = [
    "T20",    # no print()/pprint() — engine output goes through cli._emit
    "S101",   # no assert — stripped under -O; engine errors must be real errors
    "TID251", # banned imports — subprocess (see below)
]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"subprocess".msg = "subprocess is banned in engine code (§3.2): the engine is pure stdlib logic; shelling out is host-CI sugar. TWO carve-outs, each noqa'd inline with the rationale at the import site: cli.py's local-ritual parity legs (ORDER 018: _derive_inbox_base + _derive_diff_session_cards + _run_preflight_scripts) and lib/git_truth.py's make_runner (ORDER 022: the stop-hook push guard's only evidence source is local git; consumers take the GitCommand seam). Checkers themselves never shell out."
